--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <i class="icon-facebook">Tonia home</i>
                 <i class="icon-instagram">Tonia__home</i>
             </div>  
-            <p>&copy; Copyright 2020 - Tonia home. Todos los derechos reservados.</p>   
+            <p>&copy; Copyright Tonia 2020 - Tonia home. Todos los derechos reservados.</p>   
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> <!-- CDN de la librería de Popper -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> <!-- CDN de Bootstrap del JS -->
