cambie resolucion imagenes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </nav>
         </header>    
         <main>
-            <div align="center"><img src="./images/telatonia.JPG" alt="telatonia" width="300" height="400"></div>
+            <div align="center"><img src="./images/telatonia.JPG" alt="telatonia"></div>
             <!--Seccion Bienvenida-->
         <section>
             <h2>Productos destacados</h2>
