--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -23,17 +23,16 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="navbar-brand" href="../index.html">Inicio</a>
-              
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                   <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                     <li class="nav-item">
-                      <a class="nav-link" href="pages/productos.html">Productos<span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="productos.html">Productos<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="pages/comocomprar.html">Como comprar</a>
+                      <a class="nav-link" href="comocomprar.html">Como comprar</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/nosotros.html">Quienes somos</a>
+                        <a class="nav-link" href="nosotros.html">Quienes somos</a>
                       </li>
                       <li class="nav-item active">
                         <a class="nav-link" href="contacto.html">Nosotros</a>
@@ -41,7 +40,6 @@
                   </ul>
                 </div>
               </nav>
-              
         </nav>  
         </header>    
         <main>
@@ -71,8 +69,7 @@
         </section> 
     <footer align="center" class="footer_copyright">
         <p>&copy; Copyright 2020 - Tonia home. Todos los derechos reservados.</p>   
-    </footer>    
-
+    </footer>   
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> <!-- CDN de la librería de Popper -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> <!-- CDN de Bootstrap del JS -->
   </body>
