--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -15,10 +15,10 @@
              <nav>
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="pages/productos.html">Productos</a></li>
-                    <li><a href="pages/comocomprar.html">Cómo comprar</a></li>
-                    <li><a href="pages/nosotros.html">Quiénes somos</a></li>
-                    <li><a href="pages/contacto.html">Contacto</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="comocomprar.html">Cómo comprar</a></li>
+                    <li><a href="nosotros.html">Quiénes somos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </header>    
