--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -24,25 +24,23 @@
                       <span class="navbar-toggler-icon"></span>
                     </button>
                     <a class="navbar-brand" href="../index.html">Inicio</a>
-                  
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                       <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                         <li class="nav-item">
-                          <a class="nav-link" href="pages/productos.html">Productos<span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="productos.html">Productos<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="pages/comocomprar.html">Como comprar</a>
+                          <a class="nav-link" href="comocomprar.html">Como comprar</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="nosotros.html">Quienes somos</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="pages/contacto.html">Nosotros</a>
+                            <a class="nav-link" href="contacto.html">Nosotros</a>
                           </li>
                       </ul>
                     </div>
                   </nav>
-                  
             </nav>  
         </header>    
         <main>
