--- a/pages/comocomprar.html
+++ b/pages/comocomprar.html
@@ -16,39 +16,37 @@
       </head>
     <body>    
         <header>
-            <h1>Tonia</h1>
+          <img class="logo" src="../images/tonialogo.jpg">
             <nav class="header__nav-flex">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
                     <a class="navbar-brand" href="../index.html">Inicio</a>
-                  
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                       <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                         <li class="nav-item">
-                          <a class="nav-link" href="pages/productos.html">Productos<span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="productos.html">Productos<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
                           <a class="nav-link" href="comocomprar.html">Como comprar</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/nosotros.html">Quienes somos</a>
+                            <a class="nav-link" href="nosotros.html">Quienes somos</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="pages/contacto.html">Nosotros</a>
+                            <a class="nav-link" href="contacto.html">Nosotros</a>
                           </li>
                       </ul>
                     </div>
                   </nav>
-                  
             </nav>  
         </header>    
         <main>
             <!--Seccion Bienvenida-->
         <section>
             <h2>Como comprar</h2>
-            <ol align="center" class="lista">
+            <ol type="1" align="center" class="lista">
                 <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
                 <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
                 <li>Lorem ipsum dolor sit amet.</li>
@@ -56,6 +54,10 @@
                 <li>Lorem ipsum dolor sit amet.</li>
                 <li>Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
                 <li>Lorem ipsum dolor sit amet.</li>
+
+
+
+
             </ol>
         </section>
         </main> 
