--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -14,11 +14,11 @@
             <h1>Tonia</h1>
              <nav>
                 <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="productos.html">Productos</a></li>
-                    <li><a href="comocomprar.html">Cómo comprar</a></li>
-                    <li><a href="nosotros.html">Quiénes somos</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="../index.html">INICIO</a></li>
+                    <li><a href="productos.html">PRODUCTOS</a></li>
+                    <li><a href="comocomprar.html">CÓMO COMPRAR</a></li>
+                    <li><a href="nosotros.html">QUIÉNES SOMOS</a></li>
+                    <li><a href="contacto.html">CONTACTO</a></li>
                 </ul>
             </nav>
         </header>    
