--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -23,20 +23,20 @@
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="../index.html">Inicio</a>
+                    <a class="navbar-brand" href="../index.html">INICIO</a>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                       <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                         <li class="nav-item">
-                          <a class="nav-link" href="productos.html">Productos<span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="productos.html">PRODUCTOS<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="comocomprar.html">Como comprar</a>
+                          <a class="nav-link" href="comocomprar.html">CÓMO COMPRAR</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="nosotros.html">Quienes somos</a>
+                            <a class="nav-link" href="nosotros.html">QUIÉNES SOMOS</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">Nosotros</a>
+                            <a class="nav-link" href="contacto.html">NOSOTROS</a>
                           </li>
                       </ul>
                     </div>
