--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,7 @@
       </head>
     <body>    
         <header>
-            <h1>Tonia</h1>
+          <img class="logo" src="../images/tonialogo.jpg">
             <nav class="header__nav-flex">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
