--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -11,7 +11,7 @@
     </head>
     <body>    
         <header>
-            <h1>Tonia</h1>
+            <img class="logo" src="../images/tonialogo.jpg">
              <nav>
                 <ul>
                     <li><a href="../index.html">INICIO</a></li>
