--- a/pages/comocomprar.html
+++ b/pages/comocomprar.html
@@ -45,20 +45,22 @@
         <main>
             <!--Seccion Bienvenida-->
         <section>
-            <h2>Como comprar</h2>
-            <ol type="1" align="center" class="lista">
-                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-                <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, at?</li>
-                <li>Lorem ipsum dolor sit amet.</li>
-                <li>Lorem ipsum dolor, sit amet consectetur adipisicing.</li>
-                <li>Lorem ipsum dolor sit amet.</li>
-
-
-
-
+          <div class="container">
+          <h2>Como comprar</h2>
+            <ol type="1" class="lista">
+                <li>Elegí el producto que queres comprar.</li>
+                <li>Hace clic en el botón de "Agregar al carrito". Esto agregará el producto a tu carrito y te llevará al mismo.</li>
+                <li>Completa tus datos de contacto</li>
+                <li>Selecciona el método de envío que desees y haz clic en "Continuar".</li>
+                <li>Elige el medio de pago.</li>
+                <li>Una vez que hayas elegido el medio de pago, haz clic en "Continuar".</li>
+                <li>Finalmente en la página de Confirmación de compra puedes revisar toda la información de la compra. Luego haz clic en "Continuar".</li>
+                <li>Ahí serás redirigido a otra pantalla para que completes los datos sobre la forma de pago elegida. Después de confirmar la compra recibirás un correo de nuestra parte, ese no será un comprobante de pago.</li>
+                <li>Una vez acreditado el pago, tu pedido entrará en proceso. La demora aproximada es de 20/25 días hábiles (salvo productos en stock inmediato, consultar previamente)</li>
+                <li>Una vez listo, te estaremos enviando un mail paara coordinar la entrega o haremos el envío correspondiente de los productos que hayas comprado.</li>
+                <li>En la descripción de cada producto se detalla la demora aproximada para la entrega.</li>
             </ol>
+            </div>
         </section>
         </main> 
         <footer align="center" class="footer_copyright">
