--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang=" es ">
     <head>
         <meta charset="UTF 8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,25 +46,53 @@
             <!--Seccion Formulario-->
         <section>
             <h2>Contactanos</h2>
-            <form name="contact_form" action="gracias.html" method="POST">
-                <label for="form_name">Nombre y Apellido</label>
-                <input type="text" name="nombre" id="form_nombre" required />
-                <label for="form_email">Email</label>
-                <input type="email" name="email" id="form_email" required />
-                <label for="form_telefono">Telefono</label>
-                <input type="tel" name="telefono" id="form_telefono" required/>
-                <label for="form_area">Area</label>
-                <select name="area" id="form_area" required />
-                    <option selected="selected" value="0">Seleccione...</option>
-                    <option value="toniahomedeco@gmail">Atencion al Cliente</option>
-                </select>
-                <label for="form_mensaje">Mensaje</label>
-                <textarea name="mensaje" id="form_mensaje" rows="10" cols="35"></textarea>
-                <input type="checkbox" name="newsletter" id="form_newsletter" checked="checked" />
-                <label for="form_newsletter">¿Queres recibir nuestro Newsletter?</label>
-                <input type="submit" name="enviar_formulario" value="Enviar Mensaje" />
-                <input type="reset" name="borrar_formulario" value="Borrar Formulario" />
-            </form>
+            <div lang="es" class="container-fluid">
+              <div class="row">
+                  <div class="col-md-12  ">
+                      <div class="well well-sm">
+                          <form class="form-horizontal" method="post">  
+                              <fieldset>
+                                    <div class="form-group d-flex flex-column align-items-center">
+                                        <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                                        <div class="col-md-8">
+                                            <input id="fname" name="name" required type="text" placeholder="Nombre" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="form-group d-flex flex-column align-items-center">
+                                        <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
+                                        <div class="col-md-8">
+                                            <input id="lname" name="name" required type="text" placeholder="Apellido" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="form-group d-flex flex-column align-items-center">
+                                        <span class="col-md-1 col-md-offset-2 text-center"><i class="fas fa-envelope-square"></i></span>
+                                        <div class="col-md-8">
+                                            <input id="email" name="email" required type="text" placeholder="Email" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="form-group d-flex flex-column align-items-center">
+                                        <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square bigicon"></i></span>
+                                        <div class="col-md-8 ">
+                                            <input id="phone" name="phone" required type="text" placeholder="Teléfono" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="form-group d-flex flex-column align-items-center">
+                                        <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
+                                        <div class="col-md-8">
+                                            <textarea class="form-control" id="message" name="Mensaje" required placeholder="Envíanos tu mensaje te estaremos respondiendo a la brevedad" rows="7"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="form-group d-flex flex-column align-items-center">
+                                        <div class="col-md-8 text-center">
+                                            <button type="submit" class="btn btn-dark btn-lg">Envíar</button>
+                                        </div>
+                                    </div>
+                              </fieldset>
+                         </form>
+                    </div>
+                  </div>
+               </div>
+            </div>
         </main> 
         </section> 
     <footer align="center" class="footer_copyright">
