agregue fotos al carrousel

--- a/pages/comocomprar.html
+++ b/pages/comocomprar.html
@@ -46,7 +46,7 @@
             <!--Seccion Bienvenida-->
         <section>
           <div class="container">
-          <h2>Como comprar</h2>
+          <h2>Cómo comprar</h2>
             <ol type="1" class="lista">
                 <li>Elegí el producto que queres comprar.</li>
                 <li>Hace clic en el botón de "Agregar al carrito". Esto agregará el producto a tu carrito y te llevará al mismo.</li>
