--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -79,7 +79,7 @@
                                     <div class="form-group d-flex flex-column align-items-center">
                                         <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
                                         <div class="col-md-8">
-                                            <textarea class="form-control" id="message" name="Mensaje" required placeholder="Envíanos tu mensaje te estaremos respondiendo a la brevedad" rows="7"></textarea>
+                                            <textarea class="form-control" id="message" name="Mensaje" required placeholder="Envíanos tu mensaje, te responderemos en la brevedad" rows="7"></textarea>
                                         </div>
                                     </div>
                                     <div class="form-group d-flex flex-column align-items-center">
