--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -46,7 +46,7 @@
         <main>
             <!--Seccion Bienvenida-->
         <section>
-            <h2>Quienes somos</h2>
+            <h2>Quiénes somos</h2>
             <div align="center"><img src="../images/toniabag.jpg" alt="toniabag" width="300" height="400"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis nihil beatae accusantium 
                 eos cupiditate nesciunt voluptates et,totam in? Unde optio cumque, consequuntur odit labore sequi et inventore tempore vero? 
