aplique flexbox al footer y borre el shaker

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         </div>
         </section>  
         </main> 
-        <footer align="center" class="footer_copyright">
-            <div align="center" class="shake-vertical" class="footer__social-icons">
+        <footer class="footer_copyright">
+            <div class="footer__social-icons">
                 <i class="icon-facebook">Tonia home</i>
                 <i class="icon-instagram">Tonia__home</i>
             </div>  
