--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=" es ">
+<html lang="es">
     <head>
         <meta charset="UTF 8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,13 +11,14 @@
         <!--Styles-->
         <link rel="stylesheet" href="../css/archivo.css" type="text/css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="../css/icons.css" type="text/css" />
         <!--CDN de Bootstrap del CSS-->
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script><!-- CDN de la librería de Jquery  -->  
       </head>
     <body>    
         <header>
           <img class="logo" src="../images/tonialogo.jpg">
-            <nav class="header__nav-flex">
+            <nav lang="es" class="header__nav-flex">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -95,9 +96,13 @@
             </div>
         </main> 
         </section> 
-    <footer align="center" class="footer_copyright">
-        <p>&copy; Copyright 2020 - Tonia home. Todos los derechos reservados.</p>   
-    </footer>   
+        <footer class="footer_copyright">
+          <div class="footer__social-icons">
+              <i class="icon-facebook">Tonia home</i>
+              <i class="icon-instagram">Tonia__home</i>
+          </div>  
+          <p>&copy; Copyright Tonia 2020 - Tonia home. Todos los derechos reservados.</p>   
+      </footer> 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> <!-- CDN de la librería de Popper -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> <!-- CDN de Bootstrap del JS -->
   </body>
