--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -12,6 +12,7 @@
         <!--Styles-->
         <link rel="stylesheet" href="../css/archivo.css" type="text/css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="../css/icons.css" type="text/css" />
         <!--CDN de Bootstrap del CSS-->
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script><!-- CDN de la librería de Jquery  -->  
       </head>
@@ -62,9 +63,13 @@
             </p>    
         </section>
         </main> 
-        <footer align="center" class="footer_copyright"> 
-            <p>&copy; Copyright 2020 - Tonia home. Todos los derechos reservados.</p>   
-        </footer>    
+        <footer class="footer_copyright">
+          <div class="footer__social-icons">
+              <i class="icon-facebook">Tonia home</i>
+              <i class="icon-instagram">Tonia__home</i>
+          </div>  
+          <p>&copy; Copyright Tonia 2020 - Tonia home. Todos los derechos reservados.</p>   
+      </footer>  
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> <!-- CDN de la librería de Popper -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> <!-- CDN de Bootstrap del JS -->
       </body>
