--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -11,7 +11,7 @@
     </head>
     <body>    
         <header>
-            <img class="logo" src="../images/tonialogo.jpg">
+            <a href="../index.html"> <img class="logo" src="../images/tonialogo.jpg"> </a>
              <nav>
                 <ul>
                     <li><a href="../index.html">INICIO</a></li>
