--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -18,7 +18,7 @@
       </head>
     <body>    
         <header>
-          <img class="logo" src="../images/tonialogo.jpg">
+          <a href="../index.html"> <img class="logo" src="../images/tonialogo.jpg"> </a>
             <nav class="header__nav-flex">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
