agregue nav bar en footer

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="nosotros.html">QUIÉNES SOMOS</a>
                       </li>
                       <li class="nav-item active">
-                        <a class="nav-link" href="contacto.html">NOSOTROS</a>
+                        <a class="nav-link" href="contacto.html">CONTACTO</a>
                       </li>
                   </ul>
                 </div>
@@ -97,10 +97,34 @@
         </main> 
         </section> 
         <footer class="footer_copyright">
+          <nav class="header__nav-flex">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand active" href="../index.html">Inicio</a>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                  <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+                    <li class="nav-item">
+                      <a class="nav-link" href="../pages/productos.html">Productos<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="../pages/comocomprar.html">Cómo comprar</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/nosotros.html">Quiénes somos</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                      </li>
+                  </ul>
+                </div>
+              </nav>
+        </nav>
           <div class="footer__social-icons">
-              <i class="icon-facebook">Tonia home</i>
-              <i class="icon-instagram">Tonia__home</i>
-          </div>  
+               <a href="https://www.facebook.com/Tonia-101256128248245"> <i class="icon-facebook"></i> </a>
+               <a href="https://www.instagram.com/tonia__home/"><i class="icon-instagram"></i> </a>
+            </div> 
           <p>&copy; Copyright Tonia 2020 - Tonia home. Todos los derechos reservados.</p>   
       </footer> 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> <!-- CDN de la librería de Popper -->
