elimine lang en nav bar

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,7 +47,7 @@
             <!--Seccion Formulario-->
         <section>
             <h2>Contactanos</h2>
-            <div lang="es" class="container-fluid">
+            <div class="container-fluid">
               <div class="row">
                   <div class="col-md-12  ">
                       <div class="well well-sm">
