--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="css/icons.css" type="text/css" />
         <link rel="stylesheet" href="css/archivo.css" type="text/css" />
-        <link rel="stylesheet" href="fonts/X_BAMBI.TTF" type="tex/css" />
+        <link rel="stylesheet" href="fonts/X_BAMBI.TTF" type="text/css" />
+        <link rel="stylesheet" href="scss/main.scss" type="text/css" </>
        <!--CDN de Bootstrap del CSS-->
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script><!-- CDN de la librería de Jquery  -->  
     </head>
@@ -50,7 +51,7 @@
         <section>
           <div class="container">
             <h3>PRODUCTOS DESTACADOS</h3>
-            <p>Todos los productos estan hechos a mano. Por lo tanto, una vez realices la compra, tu producto tendrá una demora de 15 a 20 días. Realizamos envíos a todo el país. 
+            <p>Todos los productos están hechos a mano. Por lo tanto, una vez que realices la compra, tu producto tendrá una demora de 15 a 20 días. Realizamos envíos a todo el país. 
             </p>
             </div>
             <div class="container">
