--- a/pages/comocomprar.html
+++ b/pages/comocomprar.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="../css/archivo.css" type="text/css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="../css/icons.css" type="text/css" />
+        <link rel="stylesheet" href="../scss/main.scss" type="text/css" />
         <!--CDN de Bootstrap del CSS-->
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script><!-- CDN de la librería de Jquery  -->  
       </head>
