--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -8,6 +8,7 @@
         </title>
         <!--Styles-->
         <link rel="stylesheet" href="../css/archivo.css" type="text/css" />
+        <link rel="stylesheet" href="../scss/main.scss" type="text/css" />
     </head>
     <body>    
         <header>
