--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -8,7 +8,9 @@
         </title>
         <!--Styles-->
         <link rel="stylesheet" href="../css/archivo.css" type="text/css" />
-        <link rel="stylesheet" href="../scss/main.scss" type="text/css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="../css/icons.css" type="text/css" />
+        <link rel="stylesheet" href="../scss/main.scss" />
     </head>
     <body>    
         <header>
@@ -27,7 +29,6 @@
             <!--Seccion Gracias-->
         <section>
             <h2>¡Gracias por contactarnos!</h2>
-            <p>Lorem ipsum dolor sit amet.</p>
         </section>    
     </main> 
     <footer class="footer_copyright">
@@ -65,7 +66,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script> <!-- CDN de Bootstrap del JS -->
   </body>
 </html>
-        <p>&copy; Copyright 2020 - Tonia home. Todos los derechos reservados.</p>   
-    </footer>    
-</body>
-</html>
+       
