termine seccion quienes somos

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -49,19 +49,13 @@
             <!--Seccion Bienvenida-->
         <section>
             <h2>Quiénes somos</h2>
-            <div align="center"><img src="../images/toniabag.jpg" alt="toniabag" width="300" height="400"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis nihil beatae accusantium 
-                eos cupiditate nesciunt voluptates et,totam in? Unde optio cumque, consequuntur odit labore sequi et inventore tempore vero? 
-                eos cupiditate nesciunt voluptates et,totam in? Unde optio cumque, consequuntur odit labore sequi et inventore tempore vero?
-                eos cupiditate nesciunt voluptates et,totam in? Unde optio cumque, consequuntur odit labore sequi et inventore tempore vero?
-                eos cupiditate nesciunt voluptates et,totam in? Unde optio cumque, consequuntur odit labore sequi et inventore tempore vero?
-                eos cupiditate nesciunt voluptates et,totam in? Unde optio cumque, consequuntur odit labore sequi et inventore tempore vero?
-                eos cupiditate nesciunt voluptates et,totam in? Unde optio cumque, consequuntur odit labore sequi et inventore tempore vero?
-                eos cupiditate nesciunt voluptates et,totam in? Unde optio cumque, consequuntur odit labore sequi et inventore tempore vero?
-                eos cupiditate nesciunt voluptates et,totam in? Unde optio cumque, consequuntur odit labore sequi et inventore tempore vero?
-                eos cupiditate nesciunt voluptates et,totam in? Unde optio cumque, consequuntur odit labore sequi et inventore tempore vero?
-                eos cupiditate nesciunt voluptates et,totam in? Unde optio cumque, consequuntur odit labore sequi et inventore tempore vero?
+            <div class="container">  
+            <div class="bg-success row align-items-center justify-content-center bg-white"><img src="../images/toniabag.jpg" alt="toniabag" width="300" height="400"></div>
+            <br>Tonia home es un emprendimiento en el que todos sus productos están hechos a mano. Todo producto que tenga la marca Tonia en su etiqueta certifica que es un producto artesanal y de calidad.</br>
+              Tonia fue creada en medio de una pandemia por una estudiante del último año de Diseño e Indumentaría en la UBA. A pesar de esta pandemia, Tonia home pudo meterse en el mercado a pesar de todas las contras que esta traía.</br>
+              Tonia home es el significado de dedicación y sacrificio.
             </p>    
+            </div>
         </section>
         </main> 
         <footer class="footer_copyright">
